--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@mdi/font": "^5.9.55",
         "axios": "^0.21",
+        "case-sensitive-paths-webpack-plugin": "^2.4.0",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.35.1",
+        "sass-loader": "^11.1.1",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-router": "^3.5.2",
+        "vuetify": "^2.5.6",
+        "vuetify-loader": "^1.7.2",
+        "vuex": "^3.6.2"
     }
 }
