--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "vue-router": "^3.5.2",
+        "vue2-dropzone": "^3.6.0",
         "vuetify": "^2.5.6",
         "vuetify-loader": "^1.7.2",
         "vuex": "^3.6.2"
