--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "deepmerge": "^4.2.2",
+        "dotenv-webpack": "^7.0.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
