--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "firebase": "^8.8.1",
         "vue-router": "^3.5.2",
         "vue2-dropzone": "^3.6.0",
         "vuetify": "^2.5.6",
